@@ -3,7 +3,7 @@
 
 class SimpleScreenShot(object):
 
-    def __init__(self, data, monitor):
+    def __init__(self, data, monitor, **kwargs):
         self.raw = bytes(data)
         self.monitor = monitor
 
